# langgraph_functional_api

./: README.md
Project1/: pyproject.toml
Project1/src/project1/: simple_workflow.py
Project2/calculator/: pyproject.toml
Project2/calculator/src/calculator/: calculator.py
generator_evaluator/generator_evaluator/: pyproject.toml
generator_evaluator/generator_evaluator/src/generator_evaluator/: __init__.py  evaluator.py
orchestrator_worker_pattern/orchestrater_worker/: pyproject.toml
orchestrator_worker_pattern/orchestrater_worker/src/orchestrater_worker/: __init__.py  orch.py
orchestrator_worker_pattern/personalized_health_and_fitness_plan_generator/: .env  pyproject.toml
orchestrator_worker_pattern/personalized_health_and_fitness_plan_generator/output/: orchestrator-worker.txt
orchestrator_worker_pattern/personalized_health_and_fitness_plan_generator/src/personalized_health_and_fitness_plan_generator/: __init__.py  workflow.py
orchestrator_worker_pattern/workflow_evaluator/: .env  pyproject.toml
orchestrator_worker_pattern/workflow_evaluator/output/: evaluation_report.md
orchestrator_worker_pattern/workflow_evaluator/src/workflow_evaluator/: __init__.py  workflow.py
parallel_example/src/parallel_example/: __init__.py  parallel_example.py
react_agent/: pyproject.toml
react_agent/src/react_agent/: custom.py  react.py
routing_pattern/assistant_selector/: README.md  pyproject.toml
routing_pattern/assistant_selector/src/assistant_selector/: __init__.py  workflow.py
routing_pattern/parallel_example/: README.md  pyproject.toml
routing_pattern/parallel_example/src/parallel_example/: parallel_example.py
routing_pattern/routing_example/: README.md  pyproject.toml
routing_pattern/routing_example/src/routing_example/: __init__.py  router.py
