[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdulqadir8", email = "aq98123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.0.9",
    "langgraph>=0.2.72",
    "python-dotenv>=1.0.1",
]

[project.scripts]
simple_flow = "project1.simple_workflow:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
