[project]
name = "react-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdulqadir8", email = "aq98123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.19",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.2.74",
]

[project.scripts]
react-agent = "react_agent.react:main"
custom_agent = "react_agent.custom:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
