[project]
name = "calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdulqadir8", email = "aq98123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
calculator = "calculator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
