[project]
name = "workflow-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdulqadir8", email = "aq98123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.2.4",
    "langgraph>=0.2.74",
]

[project.scripts]
workflow-evaluator = "workflow_evaluator:main"
evaluate-prompt = "workflow_evaluator.workflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
