[project]
name = "parallel-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdulqadir8", email = "aq98123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.37",
    "langchain-google-genai>=2.0.9",
    "langgraph>=0.2.74",
    "openai>=1.63.2",
    "python-dotenv>=1.0.1",
]

[project.scripts]
lang_flow = "parallel_example.parallel_example:parallel_flow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
